@@ -39,6 +39,7 @@ Version 2.0.0 FINAL - The "Tiku - the one and only" version.
 		* Changed some deprecated IsKindOf(CLASSINFO()) to wxDynamicCast().
 		* Fixed crash in CUpDownClient::SendFileRequest(), short
 		  circuit evaluation was reversed.
+		* Created Proxy dialog on preferences.
 
 --------------------------------------------------------------------------------
 
